Finish fixed problems by sonarqube report